Fixed footer styling so everything properly aligned. Worked on some mobile styling. Testing to see if broken on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -609,28 +609,27 @@ footer{
   background-color: black;
   height: 50vh;
   display: flex;
-  align-items: center;
+  /* align-items: center;
   justify-content: center;
-  text-align: center;
+  text-align: center; */
   position: relative;
   width: 100%;
   z-index: 0;
   padding-bottom: 10%;
+  justify-content: center;
+}
+.footer-segment{
+  margin-top: 5vh;
+  color: white;
+  height: 30vh;
+  width: auto;
+  padding: 1rem;
+  text-align: left;
 }
 .footer-icon{
   width: auto;
-  height: 60%;
-  margin-left: -5%;
-  margin-right: 2rem;
-  padding-left: 6rem;
-}
-.footer-segment{
-  color: white;
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
-  text-align: left;
+  height: 30vh;
+  padding: 1rem;
 }
 .facebook-icon{
   width: 10%;
@@ -663,7 +662,6 @@ footer{
 }
 .contactus-footer{
   text-align: left;
-  margin-top: -5.5vh;
 }
 .follow-us{
   width: 10rem;
