--- a/src/styles/ContactUs.css
+++ b/src/styles/ContactUs.css
@@ -53,7 +53,9 @@
   margin-left: auto;
   margin-right: 0;
 }
-
+.contact-us-header{
+  text-align: center;
+}
 
 @keyframes spinner {
   0% {
